<resources>
    <string name="app_name">Monitor</string>
    <string name="app_name_full">Thousand Smiles Monitor</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_clinic_not_found_date">No active clinic can be found on this date</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_username_or_password">Invalid name or password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_internal_bad_request">Bad Request. Please report this problem</string>
    <string name="error_internal_error">Internal Error. Please report this problem</string>
    <string name="error_unknown">Unknown Error. Please report this problem</string>
    <string name="error_clinicstationlist">Unable to read clinic station list</string>
    <string name="error_patientlist">Unable to read patient list</string>
    <string name="error_unable_to_connect">Unable to connect. Make sure wireless is enabled, that the IP address and port settings are correct, and internet connectivity is present.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name = "label_version">Version</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_station_status">Station Status</string>

    <string formatted="false" name="format_status_banner">Avg Wait: %s Min Wait: %s Max Wait: %s Avg Line: %d Min Line: %d Max Line: %d Patients Waiting: %d</string>
    <string formatted="false" name="format_status_banner_es">Esperar medio: %s Min de Esperar: %s Max de Esperar: %s Linea Media: %d Linea Min: %d Linea Max: %d Pacientes en espera: %d</string>

    <string name="dob">DOB</string>
    <string name="dob_es">Fec. Nac.</string>

    <string name="title_delete_queue_dialog">Delete Patient from Queue</string>
    <string name="delete_yes">Delete</string>
    <string name="delete_cancel">Cancel</string>
    <string name="msg_delete">Delete</string>
    <string name="msg_remove_from_queue">"Remove patient %s (ID=%d) from %s queue?"</string>
    <string name="msg_delete_patient_from_clinic">"Delete patient %s (ID=%d) from the clinic?"</string>

    <string name="cancel">Cancel</string>

    <string name="estimated_waiting_time">Est. Wait</string>
    <string name="estimated_waiting_time_es">Espera Est.</string>

    <string name="waiting_time">Wait</string>
    <string name="waiting_time_es">Espera</string>

    <string name="male">Male</string>
    <string name="male_es">Masculino</string>

    <string name="female">Female</string>
    <string name="female_es">Femenina</string>

    <string name="away">Away</string>
    <string name="away_es">Fuera</string>

    <string name="active">Active</string>
    <string name="active_es">Activo</string>

    <string name="waiting">Waiting</string>
    <string name="waiting_es">Esperando</string>

    <string name="finished">Finished</string>
    <string name="finished_es">Terminado</string>

    <string name="dismiss">Dismiss</string>

    <string name="state">State</string>
    <string name="state_es">Estado</string>

    <string name="willreturn">Will Return</string>
    <string name="willreturn_es">Regresará</string>

    <string name="avgservicetime">Avg Service Time</string>
    <string name="avgservicetime_es">Tiempo Promedio de Servicio</string>

    <string name="clinicstationstatus">Clinic Status</string>
    <string name="clinicstationstatus_es">Estado de la clínica</string>
    <string name="msg_patient_successfully_removed">Patient successfully removed from queue</string>
    <string name="msg_patient_unsuccessfully_removed">Patient failed to be removed from the queue</string>
    <string name="msg_patient_successfully_deleted_from_clinic">Patient successfully deleted from clinic</string>
    <string name="msg_patient_unsuccessfully_deleted_from_clinic">Patient failed to be deleted from the clinic</string>
    <string name="msg_display_is_resumed">Display is resumed</string>
    <string name="msg_display_is_paused">Display is paused</string>
    <string name="title_action_dialog">Select an Action for Patient</string>
    <string name="msg_action_dialog">Select an action for patient %s (ID=%d) by clicking an icon below, or click the Cancel button.</string>
    <string name="msg_button_remove_from_xray_queue">"Remove from X-Ray queue"</string>
    <string name="msg_button_save">"Save"</string>
    <string name="msg_button_delete_from_clinic">Delete Patient From Clinic</string>
    <string name="msg_button_view_patient_summary">View Patient Summary</string>
    <string name="msg_button_edit_old_id">Edit Patient\'s Previous Chart ID</string>
    <string name="title_delete_patient_from_clinic_dialog">Delete Patient From Clinic</string>
    <string name="title_set_patient_old_id_dialog">Edit Patient Previous Chart ID</string>
    <string name="msg_unable_to_find_routing_slip_entries_for_patient">Unable to find routing slip entries for patient</string>
    <string name="msg_failed_to_get_routing_slip_entries">Failed to get routing slip entries</string>
    <string name="msg_failed_to_mark_routing_slip_removed">Failed to mark routing slip removed</string>
    <string name="msg_failed_to_get_routing_slips_for_patient">Failed to get routing slips for patient</string>
    <string name="msg_failed_to_update_patient_old_id">Failed to update previous ID for patient</string>
    <string name="msg_patient_successful_update_old_id">Successfully update patient\'s old chart ID</string>
    <string name="msg_patient_unsuccessful_update_old_id">Update of patient\'s old chart ID was successful</string>
    <string name="msg_id_must_be_a_number">ID must be a number!</string>

    <!-- XXX pulled from tscharts-register, consider refactoring both the tscharts-lib -->

    <string name="patient_id">ID</string>
    <string name="patient_oldid">Old ID</string>
    <string name="patient_name">Patient Name</string>
    <string name="paternal_last">Paternal (Father\'s) Last Name</string>
    <string name="patient_address">Patient Address</string>
    <string name="maternal_last">Maternal (Mother\'s) Last Name</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="address_street_1">Street 1</string>
    <string name="address_street_2">Street 2</string>
    <string name="address_colonia">Colony</string>
    <string name="address_city">City</string>
    <string name="address_state">State</string>
    <string name="patient_gender_dob">Gender and Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="patient_contact_info">Patient Contact Information</string>
    <string name="phone_1">Phone 1</string>
    <string name="phone_2">Phone 2</string>
    <string name="e_mail">E-Mail Address</string>

    <!-- end strings that might be refactored to tscharts-lib -->

    <!-- patient summary dialog -->

    <string name="title_patient_summary">Patient Summary</string>

</resources>
