<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/simpleTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"> <!-- stretch the second column of the layout-->

        <TableRow

            android:id="@+id/patient_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView

                android:id="@+id/title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/patient_id"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/value_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="Text 2"
                android:textColor="#000"
                android:textSize="14dp" />

        </TableRow>

        <TableRow

            android:id="@+id/patient_curp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView

                android:id="@+id/title_curp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="CURP"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView

                android:id="@+id/value_curp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="Text 2"
                android:textColor="#000"
                android:textSize="14dp" />
        </TableRow>

        <TableRow

            android:id="@+id/patient_dob"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView

                android:id="@+id/title_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/dob"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView

                android:id="@+id/value_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="Text 2"
                android:textColor="#000"
                android:textSize="14dp" />
        </TableRow>
        <TableRow

            android:id="@+id/patient_first"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView

                android:id="@+id/title_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/first_name"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView

                android:id="@+id/value_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="Text 2"
                android:textColor="#000"
                android:textSize="14dp" />
        </TableRow>
        <TableRow

            android:id="@+id/patient_middle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView

                android:id="@+id/title_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/middle_name"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView

                android:id="@+id/value_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="Text 2"
                android:textColor="#000"
                android:textSize="14dp" />
        </TableRow>
        <TableRow

            android:id="@+id/patient_fatherlast"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView

                android:id="@+id/title_fatherlast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/paternal_last"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView

                android:id="@+id/value_fatherlast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="Text 2"
                android:textColor="#000"
                android:textSize="14dp" />
        </TableRow>
        <TableRow

            android:id="@+id/patient_motherlast"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView

                android:id="@+id/title_motherlast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/maternal_last"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView

                android:id="@+id/value_motherlast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="Text 2"
                android:textColor="#000"
                android:textSize="14dp" />
        </TableRow>
        <TableRow

            android:id="@+id/patient_gender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView

                android:id="@+id/title_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/gender"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView

                android:id="@+id/value_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="Text 2"
                android:textColor="#000"
                android:textSize="14dp" />
        </TableRow>
        <TableRow

            android:id="@+id/patient_oldid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView

                android:id="@+id/title_oldid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/patient_oldid"
                android:textColor="#000"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/value_oldid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="Text 2"
                android:textColor="#000"
                android:textSize="14dp" />

        </TableRow>

    </TableLayout>
</RelativeLayout>